force-app/main/default/objects/Global_GL_Account__mdt/Global_GL_Account__mdt.object-meta.xml
<CustomObject>
    <description>Stores GL codes and names for payment and receivables accounts</description>
    <label>Global GL Account</label>
    <pluralLabel>Global GL Accounts</pluralLabel>
</CustomObject>