force-app/main/default/objects/Global_GL_Account__mdt/fields/GL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Name__c</fullName>
    <description>The GL account name as it should appear in the ledger</description>
    <inlineHelpText>The GL account name as it should appear in the ledger</inlineHelpText>
    <label>GL Account Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>