force-app/main/default/objects/Global_GL_Account__mdt/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>