force-app/main/default/objects/Global_GL_Account__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Receivables</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>